--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*/* CSS for personal bio website */
+/* CSS for personal bio website */
 
 /* General styles */
 body {
@@ -195,4 +195,3 @@ footer {
   margin-right: 1rem;
 }
 
-*/
