--- a/styles.css
+++ b/styles.css
@@ -189,26 +189,34 @@ height: 10rem;
 
 /* Footer styles */
 footer {
-padding: 1rem;
-background-color: #222;
-color: #fff;
-text-align: center;
+  background-color: #333;
+  padding: 2rem 0;
+  color: #fff;
+  text-align: center;
 }
 
 .footer-links {
-  display: flex;
-  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .footer-links a {
-  margin-right: 10px;
-  color: #333;
-  text-decoration: none;
+  color: #fff;
+  margin-right: 1rem;
+  font-size: 1.5rem;
 }
 
 .footer-links a:hover {
-  color: #ff6600;
+  color: #ff9900;
 }
+
+.footer-links i {
+  margin-right: 0.5rem;
+}
+
+.footer-links a:last-child {
+  margin-right: 0;
+}
+
 
 
 /* Additional Styles */
