--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@ color: #333;
 
 /* Footer styles */
 footer {
-  background-color: #222;
+  background-color: #ff9900;
   padding: 2rem 0;
   color: #fff;
   text-align: center;
