--- a/styles.css
+++ b/styles.css
@@ -189,11 +189,12 @@ height: 10rem;
 
 /* Footer styles */
 footer {
+  padding: 1rem;
   background-color: #333;
-  padding: 2rem 0;
   color: #fff;
   text-align: center;
 }
+
 
 .footer-links {
   margin-bottom: 1rem;
