--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ color: #333;
 
 /* Footer styles */
 footer {
-  background-color: #ff9900;
+  background-color: #333;
   padding: 2rem 0;
   color: #fff;
   text-align: center;
@@ -293,4 +293,3 @@ footer {
 .footer-links a:last-child {
   margin-right: 0;
 }
-
