--- a/styles.css
+++ b/styles.css
@@ -188,12 +188,6 @@ a:hover {
 }
 
 /* Footer styles */
-footer {
-  background-color: #333333; /* Update to the desired background color */
-  padding: 2rem 0;
-  color: #fff;
-  text-align: center;
-}
 
 .footer-links {
   margin-bottom: 1rem;
@@ -216,4 +210,13 @@ footer {
 .footer-links a:last-child {
   margin-right: 0;
 }
+.footer-links a:last-child {
+  margin-right: 0;
+}
 
+footer {
+  background-color: #333;
+  padding: 2rem 0;
+  color: #fff;
+  text-align: center;
+}
