--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ a:hover {
 
 /* Footer styles */
 footer {
-  background-color: #333 !important;
+  background-color: #333333; !important;
   padding: 2rem 0;
   color: #fff;
   text-align: center;
