--- a/styles.css
+++ b/styles.css
@@ -224,10 +224,10 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
 }
 
@@ -252,6 +252,10 @@ footer {
 
 #optin-form .form-group {
   margin-bottom: 10px;
+}
+
+#optin-form .btn {
+  margin-top: 10px;
 }
 
 #optin-form .btn {
