--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ footer {
 #optin-content h2 {
   font-size: 24px;
   margin-bottom: 10px;
-  color: #333;
+  color: #fff;
 }
 
 #optin-content p {
